--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,12 @@
+# PORT
 PORT=3000
 
-FRONTEND_URI=http://localhost:3000
-BACKEND_URI=http://localhost:4000
+# DB URI
 DB_URI=mongodb://0.0.0.0:27017/
 
+# Nodemailer
 # reference: https://knowledge.workspace.google.com/kb/how-to-create-app-passwords-000009237
+SMTP_HOST="smtp.gmail.com"
+SMTP_PORT=587
+SMTP_USER=
 SMTP_PASS=
-SMTP_MAIL=
-SMTP_HOST=
